# autonomous

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Install_dependencies.sh  LICENSE  Makefile  README.md  cone_detection.ipynb  devcontainers.json  docker-compose-Linux.debug.yml  docker-compose-macos.yml  docker-compose.CPU.yml  docker-compose.GPU.yml  docker-compose.debug.yml  docker-compose.yml  docker-compose_macos.yml  jetson.Dockerfile  kaggle.json  makefile  perception_init.sh  pyzed-4.0-cp310-cp310-linux_x86_64.whl  requirements.txt  ros2_ws.Dockerfile  ros_entrypoint.sh  roszed_entrypoint.sh  run_aruco_detect.sh  run_cone_detect.sh  run_cone_map.sh  run_cone_map_visualizer.sh  run_controller.sh  run_controller_visualizer.sh  run_foxglove_ros.sh  run_localization.sh  run_path_planning.sh  run_path_planning_visualizer.sh  run_simulation_car_control.sh  run_visualizer.sh  run_zed_wrapper.sh  (+6 more)
.devcontainer/: devcontainer.json  docker-compose.yml  ros2_perception.Dockerfile  ros2_ws.Dockerfile  zed.Dockerfile
.docker_templates/: docker-compose.CPU.yml  docker-compose.GPU.yml  ros2_ws.Dev.Dockerfile  ros2_ws.Dockerfile  ros2_ws.Jetson.Dockerfile  zed.Dev.Dockerfile  zed.Dockerfile  zed.Jetson.Dockerfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  tests.yml
.personalcontainer/: ros_zed_combine.Dockerfile
launch/: demo_nodes_launch.py
moa_description/urdf/: links.xacro  robot.urdf.xacro
src/CAN/: package.xml  setup.cfg  setup.py
src/action/head_to_goal_control/: package.xml  setup.cfg  setup.py
src/action/head_to_goal_control/head_to_goal_control/: controller.py
src/action/pure_pursuit/: package.xml  setup.py
src/action/pure_pursuit/pure_pursuit/: pure_pursuit.py
src/action/stanley_controller/: package.xml  setup.cfg  setup.py
src/action/stanley_controller/stanley_controller/: stanley_controller.py  stanley_test.py
src/action/steer_torque_from_ackermann/: package.xml  readme.md  setup.cfg  setup.py
src/action/steer_torque_from_ackermann/steer_torque_from_ackermann/: converter.py
src/cone_detection/: package.xml  setup.py
src/cone_mapping/: mapping_with_text_input.py  test-data-5-cones-rot-only-all-cone.txt  test-data-5-cones.txt  test_data.txt  testcase_generator.py
src/cone_mapping/cone_mapping/: setup.py
src/cone_mapping/cone_mapping/cone_mapping/: client_function_test.py  subscriber_member_function.py
src/cone_mapping/data_sorting/: package.xml  setup.cfg  setup.py
src/cone_mapping/data_sorting/data_sorting/: subscriber_member_function.py
src/cone_mapping/mapping_interfaces/: CMakeLists.txt  package.xml
src/cone_mapping/mapping_interfaces/msg/: CANStamped.msg  ConeMapStamped.msg
src/cone_mapping/mapping_interfaces/srv/: ConeMappingService.srv
src/cone_mapping/test_data_pack/: test-data-50-cones.txt  test_data.txt
src/cone_mapping/virtual_sensor/: setup.cfg  setup.py
src/moa/moa_bingup/: package.xml  setup.cfg  setup.py
src/moa/moa_bringup/: package.xml  setup.cfg  setup.py
src/moa/moa_bringup/launch/: base.launch.py  base.py  scrutineering.py  sim_launch.py  test_aruco.py  urdf_model.launch.py
src/moa/moa_controllers/: package.xml  setup.cfg  setup.py
src/moa/moa_controllers/launch/: control.py
src/moa/moa_controllers/moa_controllers/: CANNode.py  CANdapter.py  ack_to_can.py  ack_to_can_test.py  ack_to_motec.py  detection.py  event_controller_TEMPLATE.py  pure_pursuit.py  sys_status.py  trajectory_follower_p_controller.py
src/moa/moa_controllers/test/: test_ackermann.py  test_sys_status.py
src/moa/moa_description/: package.xml  setup.cfg  setup.py
src/moa/moa_driver/: package.xml  setup.cfg  setup.py
src/moa/moa_msgs/: CMakeLists.txt  package.xml
src/moa/moa_msgs/msg/: AllStates.msg  AllTrajectories.msg  BoundaryStamped.msg  CAN.msg  CandidateState.msg  CandidateStates.msg  Cone.msg  ConeMap.msg  HardwareStates.msg  HardwareStatesStamped.msg  MissionStates.msg  MissionStatesStamped.msg  OccupancyGrid.msg  Pulse.msg
src/moa/moa_msgs/srv/: CAN.srv  CANSendReq.srv
src/perception/aruco_detection/: package.xml  setup.cfg  setup.py
src/perception/cone-detection/: package.xml  setup.cfg  setup.py
src/perception/cone-detection/cone_detection/: README.md  detection_final.py  detector-clean-worked.py
src/perception/localization/: package.xml  setup.py
src/perception/occupancy_grid/: package.xml  setup.py
src/perception/virtual_sensor/: TESTDATA.txt  package.xml
src/perception/zed_detection/: package.xml  setup.cfg  setup.py
src/plan_act/scrutineering/: package.xml  setup.cfg  setup.py
src/plan_act/test_plan_act_algorithems/: package.xml  setup.cfg  setup.py
src/planning/occupancy_grid/: package.xml  setup.py
src/planning/path_optimisation/: package.xml  setup.cfg  setup.py
src/planning/path_planning/: package.xml  setup.py
src/planning/planning_path/: package.xml  setup.cfg  setup.py
src/planning/planning_path/planning_path/: path_optimisation.py  planning_path.py  test_path_optimisation.py  test_planning_path.py  visualise_trajectories.py
src/visualization/path_planning_visualization/: package.xml  setup.cfg  setup.py
src/visualization/pure_pursuit_visualization/: setup.py
src/visualization/pure_pursuit_visualizer/: package.xml  setup.cfg  setup.py
src/visualization/virtual_sensor/: setup.py
yolov7/: INSTRUCTION.txt
yolov7/data/: cones_custom.yaml
yolov7/test/labels/: amz_00016_jpg.rf.bc7689a9234926aa78bc9a6f99236109.txt  mms_00614_jpg.rf.0b098ce488c4235c0739b0d1ee117bfb.txt
yolov7/train/: labels.cache
yolov7/train/labels/: amz_00075_jpg.rf.1ab42b736b96d8594f25683bb93d0cf8.txt  amz_00588_jpg.rf.901789a26f78e2b2c8c990b5d23c8fa0.txt  amz_00736_png.rf.301f899cc05aff6a742c6f44b3dee45a.txt  ff_00006_png.rf.9cb6478f2eabf1315cdf51250a41c3c4.txt  ff_00258_png.rf.97cf282b79216d9c96d93b44786a5722.txt  ff_00267_png.rf.1dc4861e651b7a1c9bb9cf556ea946ca.txt  mms_00597_jpg.rf.afaf0023f6e7e3058b91b0c2bffc058b.txt  mms_00610_jpg.rf.91bcb8073646d9c8d19c105568f02783.txt
(+91 files in other folders)
