<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit</name>
  <version>0.0.0</version>
  <description>Pure pursuit algorithm for car control decision making</description>
  <maintainer email="zane.larking@fsae.co.nz">dyu056</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
   <!--Python Packages-->
  <exec_depend>python3-numpy</exec_depend>
 
  <!--ROS2 Message Types-->
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>moa_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
