<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moa_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chrisgraham908@gmail.com">chris</maintainer>
  <license>TODO: License declaration</license>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>scrutineering</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
