<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moa_controllers</name>
  <version>0.0.0</version>
  <description>Receives stamped ackermann msg from a topic and converts it to CAN msg for motec to read and publishes CAN msg to service</description>
  <maintainer email="adam.keating@fsae.co.nz">Adam Keating</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>diagnosticmsgs</exec_depend>
  <exec_depend>moa_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
