<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cone_detection</name>
  <version>0.0.0</version>
  <description>THis package connect to ZED and implement cone detection</description>
  <maintainer email="ych363@aucklanduni.ac.nz">yiyang</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moa_msgs</build_depend>
  <build_depend>sys</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>argparse</build_depend>
  <build_depend>torch</build_depend>
  <build_depend>cv2</build_depend>
  <build_depend>pyzed</build_depend>
  
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moa_msgs</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>pyzed</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
