<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planning_path</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Tanish.Bhatt@fsae.co.nz">root</maintainer>
  <license>Package for path planning implementation</license>

  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moa_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>foxglove_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
